--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blackbeard",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
     "cpx-fixed": "^1.6.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "nodemon": "^2.0.4",
     "progress": "^2.0.3",
     "rss-parser": "^3.8.0",
     "socket.io": "^2.3.0",
