--- a/lib/bb-web.service
+++ b/lib/bb-web.service
@@ -1,15 +1,14 @@
-
 [Unit]
-Description=Node.js Blackbeard monitor
+Description=Node.js Blackbeard web server
 
 [Service]
-PIDFile=/tmp/blackbeard-monitor.pid
+PIDFile=/tmp/bb-web.pid
 User=lindsay
 Group=lindsay
 Restart=always
 KillSignal=SIGQUIT
 WorkingDirectory=/home/lindsay/Node/blackbeard/
-ExecStart=/home/lindsay/Node/blackbeard/monitor.js
+ExecStart=/home/lindsay/Node/blackbeard/web.js
 
 [Install]
 WantedBy=multi-user.target
