--- a/lib/transmission.settings.json
+++ b/lib/transmission.settings.json
@@ -16,7 +16,7 @@
     "download-limit": 100,
     "download-limit-enabled": 0,
     "download-queue-enabled": true,
-    "download-queue-size": 3,
+    "download-queue-size": 2,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
@@ -56,7 +56,7 @@
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
-    "script-torrent-done-filename": "",
+    "script-torrent-done-filename": "/home/lindsay/Node/blackbeard/torrent-complete.js",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
     "speed-limit-down": 10,
@@ -69,7 +69,5 @@
     "upload-limit": 100,
     "upload-limit-enabled": 0,
     "upload-slots-per-torrent": 14,
-    "utp-enabled": true,
-    "watch-dir": "/home/lindsay/Node/blackbeard",
-    "watch-dir-enabled": true
+    "utp-enabled": true
 }
