--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "blackbeard",
-  "version": "1.0.0",
-  "description": "",
-  "main": "web.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^4.5.0",
-    "chromecast-api": "^0.3.3",
-    "cpx-fixed": "^1.6.0",
-    "express": "^4.17.1",
-    "jquery": "^3.5.1",
-    "nodemon": "^2.0.4",
-    "progress": "^2.0.3",
-    "rss-parser": "^3.8.0",
-    "socket.io": "^2.3.0",
-    "transmission-promise": "^1.1.4"
-  }
+    "name": "blackbeard",
+    "version": "1.0.0",
+    "description": "",
+    "main": "web.js",
+    "scripts": {
+        "start": "nodemon web.js --ext js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bootstrap": "^4.5.0",
+        "chromecast-api": "^0.3.3",
+        "cpx-fixed": "^1.6.0",
+        "express": "^4.17.1",
+        "jquery": "^3.5.1",
+        "moment": "^2.26.0",
+        "nodemon": "^2.0.4",
+        "popper.js": "^1.11.0",
+        "progress": "^2.0.3",
+        "puppeteer": "^2.0.0",
+        "rss-parser": "^3.8.0",
+        "socket.io": "^2.3.0",
+        "socket.io-client": "^2.3.0",
+        "transmission-promise": "^1.1.4"
+    }
 }
