--- a/lib/transmission.settings.json
+++ b/lib/transmission.settings.json
@@ -56,11 +56,11 @@
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
-    "script-torrent-done-filename": "/home/lindsay/Node/blackbeard/torrent-complete.js",
+    "script-torrent-done-filename": "",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
     "speed-limit-down": 10,
-    "speed-limit-down-enabled": false,
+    "speed-limit-down-enabled": true,
     "speed-limit-up": 100,
     "speed-limit-up-enabled": false,
     "start-added-torrents": true,
