--- a/lib/blackbeard.service
+++ b/lib/blackbeard.service
@@ -2,13 +2,13 @@
 Description=Node.js Blackbeard web server
 
 [Service]
-PIDFile=/tmp/bb-web.pid
+PIDFile=/tmp/blackbeard.pid
 User=lindsay
 Group=lindsay
 Restart=always
 KillSignal=SIGQUIT
 WorkingDirectory=/home/lindsay/Node/blackbeard/
-ExecStart=/home/lindsay/Node/blackbeard/web.js
+ExecStart=/home/lindsay/Node/blackbeard/index.js
 
 [Install]
 WantedBy=multi-user.target
