--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "license": "ISC",
     "dependencies": {
         "bootstrap": "^4.5.0",
-        "chromecast-api": "^0.3.3",
-        "cpx-fixed": "^1.6.0",
         "express": "^4.17.1",
+        "g": "^2.0.1",
         "jquery": "^3.5.1",
-        "moment": "^2.26.0",
+        "node-sass": "^4.14.1",
         "nodemon": "^2.0.4",
         "popper.js": "^1.11.0",
-        "progress": "^2.0.3",
         "puppeteer": "^2.0.0",
         "rss-parser": "^3.8.0",
         "socket.io": "^2.3.0",
