Add buttons for non show torrents

--- a/lib/transmission.settings.json
+++ b/lib/transmission.settings.json
@@ -15,8 +15,8 @@
     "download-dir": "/var/lib/transmission-daemon/downloads",
     "download-limit": 100,
     "download-limit-enabled": 0,
-    "download-queue-enabled": true,
-    "download-queue-size": 2,
+    "download-queue-enabled": false,
+    "download-queue-size": 8,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
